<resources>
    <string name="app_name">Ottawa Waste Schedule</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_onboarding" translatable="false">OnboardingActivity</string>

    <string name="action_settings" translatable="false">@string/title_activity_settings</string>
    <string name="action_change_location">Change Location</string>

    <string name="no_network_connection">Unable to detect network connection.  Content will not load or may not be current.</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="sync_no_schedule">Unable to retrieve schedule for location.  Try picking a different location.</string>
    <string name="sync_unknown_error">Server down or unknown error retrieving schedule.</string>
    <string name="choose_location_for_waste_collection">Choose Location for Waste Collection</string>
    <string name="use_current_location">Use current location</string>
    <string name="select_location_from_map">Select location from map</string>

    <string name="missing_permission">Missing Permission</string>
    <string name="location_permission_help_text"> The Location permission is needed to determine your garbage collection schedule.\n\nTo grant this permission click on Settings, then Permissions and turn the Location permission on.\n\nThen click back twice to return to the app.</string>

    <string name="next_pickup">Next Waste Pickup</string>
    <string name="next_pickup_tomorrow">Next Waste Pickup Tomorrow</string>
    <string name="and">and</string>

    <string name="no_schedule_to_display">No Schedule to display</string>
    <string name="black_box">Black Box</string>
    <string name="blue_box">Blue Box</string>
    <string name="garbage">Garbage</string>
    <string name="green_bin">Green Bin</string>
    <string name="yard_waste">Yard Waste</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">capstoneproject.cameocoder.com</string>
    <string name="content_authority" translatable="false">com.cameocoder.capstoneproject.app</string>

    <!-- Widget related -->
    <string name="widget_label">Next Pickup</string>
    <string name="widget_no_data">No Data</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_about">About</string>
    <string name="pref_show_notifications_key" translatable="false">show_notifications</string>
    <string name="pref_title_new_message_notifications">Show Notifications</string>
    <string name="prefs_credits">Credits</string>
    <string name="about_app_icon">Application Icon</string>
    <string name="about_recycle_icon">Recycle Icon</string>
    <string name="about_trash_icon">Trash Icon</string>

    <string name="more_link"><a href='http://ottawa.ca/en/residents/garbage-and-recycling'>Find out more about your Garbage and Recycling</a></string>

    <string name="notification_channel_name">Pickup Reminder</string>
</resources>
