<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/next_pickup"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:id="@+id/vectorDrawableAppCompatTextView" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        tools:text="Monday, January 9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.cameocoder.capstoneproject.VectorDrawableAppCompatTextView
            android:id="@+id/black_bin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black_box"
            android:drawableTint="@color/icons"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/black_box"
            android:textColor="@color/primary_light"
            app:drawableTopCompat="@drawable/ic_recycle_light_24dp" />

        <com.cameocoder.capstoneproject.VectorDrawableAppCompatTextView
            android:id="@+id/blue_bin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue_box"
            android:drawableTint="@color/icons"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/blue_box"
            android:textColor="@color/primary_light"
            app:drawableTopCompat="@drawable/ic_recycle_light_24dp" />

        <com.cameocoder.capstoneproject.VectorDrawableAppCompatTextView
            android:id="@+id/garbage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/garbage"
            android:drawableTint="@color/icons"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/garbage"
            android:textColor="@color/primary_light"
            app:drawableTopCompat="@drawable/ic_trash_light_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.cameocoder.capstoneproject.VectorDrawableAppCompatTextView
            android:id="@+id/green_bin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green_bin"
            android:drawableTint="@color/icons"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/green_bin"
            android:textColor="@color/primary_light"
            app:drawableTopCompat="@drawable/ic_recycle_light_24dp" />

        <com.cameocoder.capstoneproject.VectorDrawableAppCompatTextView
            android:id="@+id/yard_waste"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/yard_waste"
            android:drawableTint="@color/icons"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/yard_waste"
            android:textColor="@color/primary_light"
            app:drawableTopCompat="@drawable/ic_local_florist_light_24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/more_info"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/more_link" />

</LinearLayout>